--- a/law.cfg
+++ b/law.cfg
@@ -22,12 +22,12 @@ columnflow.columnar_util-perf: INFO
 [analysis]
 
 default_analysis: h4l.config.analysis_h4l.analysis_h4l
-default_config: run2_2017_nano_v9
-default_dataset: st_tchannel_t_powheg
+default_config: run2_2018_nano_v9
+default_dataset: h_ggf_4l_powheg
 
 calibration_modules: columnflow.calibration.cms.{jets,met}, h4l.calibration.example
-selection_modules: columnflow.selection.cms.{json_filter, met_filters}, h4l.selection.example
-production_modules: columnflow.production.{categories,normalization,processes}, columnflow.production.cms.{btag,electron,mc_weight,muon,pdf,pileup,scale,seeds}, h4l.production.example
+selection_modules: columnflow.selection.cms.{json_filter, met_filters}, h4l.selection.{example,default}
+production_modules: columnflow.production.{categories,normalization,processes}, columnflow.production.cms.{btag,electron,mc_weight,muon,pdf,pileup,scale,seeds}, h4l.production.{example,weights,default}
 categorization_modules: h4l.categorization.example
 ml_modules: columnflow.ml, h4l.ml.example
 inference_modules: columnflow.inference, h4l.inference.example
