first version of FSR photon correction, just for electrons for now

--- a/law.cfg
+++ b/law.cfg
@@ -25,7 +25,7 @@ default_analysis: h4l.config.analysis_h4l.analysis_h4l
 default_config: run2_2018_nano_v9
 default_dataset: h_ggf_4l_powheg
 
-calibration_modules: columnflow.calibration.cms.{jets,met}, h4l.calibration.example
+calibration_modules: columnflow.calibration.cms.{jets,met}, h4l.calibration.{example,default,fsr_photon_correction}
 selection_modules: columnflow.selection.cms.{json_filter, met_filters}, h4l.selection.{example,default}
 production_modules: columnflow.production.{categories,normalization,processes}, columnflow.production.cms.{btag,electron,mc_weight,muon,pdf,pileup,scale,seeds}, h4l.production.{example,weights,default}
 categorization_modules: h4l.categorization.example
