--- a/law.cfg
+++ b/law.cfg
@@ -67,11 +67,11 @@ log_array_function_runtime: False
 [outputs]
 
 # list of all used file systems
-wlcg_file_systems: wlcg_fs, wlcg_fs_infn_redirector, wlcg_fs_global_redirector
+wlcg_file_systems: wlcg_fs, wlcg_fs_desy_dcache, wlcg_fs_infn_redirector, wlcg_fs_global_redirector
 
 # list of file systems used by columnflow.tasks.external.GetDatasetLFNs.iter_nano_files to
 # look for the correct fs per nano input file (in that order)
-lfn_sources: wlcg_fs_infn_redirector, wlcg_fs_global_redirector
+lfn_sources: wlcg_fs_desy_dcache, wlcg_fs_infn_redirector, wlcg_fs_global_redirector
 
 # output locations per task family
 # for local targets : "local[, LOCAL_FS_NAME or STORE_PATH]"
@@ -102,6 +102,26 @@ use_cache: $CF_WLCG_USE_CACHE
 cache_root: $CF_WLCG_CACHE_ROOT
 cache_cleanup: $CF_WLCG_CACHE_CLEANUP
 cache_max_size: 50GB
+
+
+[wlcg_fs_desy_store_user]
+
+xrootd_base: root://dcache-cms-xrootd.desy.de:1094/pnfs/desy.de/cms/tier2/store/user/$CF_CERN_USER/$CF_STORE_NAME
+gsiftp_base: gsiftp://dcache-door-cms04.desy.de:2811/pnfs/desy.de/cms/tier2/store/user/$CF_CERN_USER/$CF_STORE_NAME
+base: &::gsiftp_base
+
+
+[wlcg_fs_desy_dcache]
+
+xrootd_base: root://dcache-cms-xrootd.desy.de:1094/pnfs/desy.de/cms/tier2
+gsiftp_base: gsiftp://dcache-door-cms04.desy.de:2811/pnfs/desy.de/cms/tier2
+base: &::xrootd_base
+use_cache: $CF_WLCG_USE_CACHE
+cache_root: $CF_WLCG_CACHE_ROOT
+cache_cleanup: $CF_WLCG_CACHE_CLEANUP
+cache_max_size: 15GB
+cache_global_lock: True
+cache_mtime_patience: -1
 
 
 [wlcg_fs_infn_redirector]
