latest updates, with debugging

--- a/law.cfg
+++ b/law.cfg
@@ -71,7 +71,7 @@ wlcg_file_systems: wlcg_fs, wlcg_fs_infn_redirector, wlcg_fs_global_redirector
 
 # list of file systems used by columnflow.tasks.external.GetDatasetLFNs.iter_nano_files to
 # look for the correct fs per nano input file (in that order)
-lfn_sources: wlcg_fs_infn_redirector, wlcg_fs_global_redirector
+lfn_sources: wlcg_fs_desy_store, wlcg_fs_infn_redirector, wlcg_fs_global_redirector
 
 # output locations per task family
 # for local targets : "local[, LOCAL_FS_NAME or STORE_PATH]"
@@ -81,6 +81,28 @@ lfn_sources: wlcg_fs_infn_redirector, wlcg_fs_global_redirector
 # cf.CalibrateEvents: wlcg
 # cf.SelectEvents: local
 
+cf.BundleRepo: wlcg
+cf.BundleSoftware: wlcg
+cf.BundleBashSandbox: wlcg
+cf.BundleCMSSWSandbox: wlcg
+cf.BundleExternalFiles: wlcg
+cf.GetDatasetLFNs: wlcg
+cf.CalibrateEvents: wlcg
+cf.SelectEvents: wlcg
+cf.MergeSelectionStats: wlcg
+cf.MergeSelectionMasks: wlcg
+cf.ReduceEvents: wlcg
+cf.MergeReductionStats: wlcg
+cf.MergeReducedEvents: wlcg
+cf.ProduceColumns: wlcg
+cf.CreatePileupWeights: wlcg
+cf.PrepareMLEvents: wlcg
+cf.MergeMLEvents: wlcg
+cf.MLTraining: wlcg
+cf.MLEvaluation: wlcg
+cf.PlotVariables1D: wlcg
+cf.MergeHistograms: wlcg
+cf.CreateHistograms: wlcg
 
 [job]
 
@@ -92,8 +114,46 @@ job_file_dir_cleanup: False
 
 base: /
 
+[local_fs_desy_dcache]
+
+base: /pnfs/desy.de/cms/tier2
+
+[wlcg_fs_desy]
+
+webdav_base: davs://dcache-cms-webdav-wan.desy.de:2880/pnfs/desy.de/cms/tier2/store/user/$CF_CERN_USER/$CF_STORE_NAME
+gsiftp_base: gsiftp://dcache-door-cms04.desy.de:2811/pnfs/desy.de/cms/tier2/store/user/$CF_CERN_USER/$CF_STORE_NAME
+xrootd_base: root://dcache-cms-xrootd.desy.de:1094/pnfs/desy.de/cms/tier2/store/user/$CF_CERN_USER/$CF_STORE_NAME
+base: &::webdav_base
 
 [wlcg_fs]
+
+base: &::wlcg_fs_desy::base
+base_mkdir_rec: &::wlcg_fs_desy::gsiftp_base
+create_file_dir: True
+use_cache: $CF_WLCG_USE_CACHE
+cache_root: $CF_WLCG_CACHE_ROOT
+cache_cleanup: $CF_WLCG_CACHE_CLEANUP
+cache_max_size: 50GB
+
+[wlcg_fs_desy_gsiftp]
+
+; hard-wired to gsiftp base
+base: &::wlcg_fs_desy::gsiftp_base
+
+[wlcg_fs_desy_store]
+
+webdav_base: davs://dcache-cms-webdav-wan.desy.de:2880/pnfs/desy.de/cms/tier2
+gsiftp_base: gsiftp://dcache-door-cms04.desy.de:2811/pnfs/desy.de/cms/tier2
+xrootd_base: root://dcache-cms-xrootd.desy.de:1094/pnfs/desy.de/cms/tier2
+base: &::xrootd_base
+use_cache: $CF_WLCG_USE_CACHE
+cache_root: $CF_WLCG_CACHE_ROOT
+cache_cleanup: $CF_WLCG_CACHE_CLEANUP
+cache_max_size: 15GB
+cache_global_lock: True
+cache_mtime_patience: -1
+
+[wlcg_fs_cern]
 
 # set this to your desired location
 base: root://eosuser.cern.ch/eos/user/$CF_CERN_USER_FIRSTCHAR/$CF_CERN_USER/$CF_STORE_NAME
